[package]
name = "ssd-web"
version = "0.21.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
ssd = { version = "0.21.0", path = "crates/ssd", default-features = false, features = ["_web"] }
web-sys = "0.3.66"

[workspace]
members = ["crates/ssd", "crates/ssd-data"]
exclude = ["generators/wasm-example"]
