[workspace]
members = ["crates/ssd", "crates/ssd-data", "web"]
default-members = ["crates/ssd"]
exclude = ["generators/wasm-example", "web"]
resolver = "2"

[workspace.package]
version = "0.23.0"
edition = "2024"
license-file = "LICENSE"
description = "A service and data description format + a code generator based on rhai scripts and templates"
homepage = "https://github.com/ssd-codegen/ssd"
repository = "https://github.com/ssd-codegen/ssd"
readme = "README.md"
