[package]
name = "ssd-data"
version = "0.10.1"
edition = "2021"
license-file = "../LICENSE"
description = "A service and data description format + a code generator based on rhai scripts and templates"
homepage = "https://github.com/ssd-codegen/ssd"
repository = "https://github.com/ssd-codegen/ssd"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liquid = { version = "0.26.1", optional = true }
liquid-derive = { version = "0.26.1", optional = true }
serde = { version = "1.0.158", features = ["derive"] }
termcolor = "1.2.0"

[features]
default = []
liquid = ["dep:liquid", "dep:liquid-derive"]
