[package]
name = "ssd-data"
version = "0.15.1"
edition = "2021"
license-file = "../LICENSE"
description = "A service and data description format + a code generator based on rhai scripts and templates"
homepage = "https://github.com/ssd-codegen/ssd"
repository = "https://github.com/ssd-codegen/ssd"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
indexmap = { version = "2.1.0", features = ["serde"] }
termcolor = { version = "1.2.0", optional = true }
pyo3 = { version = "0.20.0", features = ["extension-module", "indexmap"], optional = true }

[features]
default = []
_access_functions = ["termcolor"]
