[package]
name = "ssd-web"
version = "0.20.1"
edition = "2021"
publish = false

[dependencies]
dioxus = "0.6.2"
ssd = { version = "0.20.1", path = "..", default-features = false, features = [
    "_web",
    "experimental",
] }
web-sys = "0.3.66"

[features]
web = ["dioxus/web"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
