[package]
name = "ssd-web"
version = "0.23.0"
edition = "2024"
publish = false

[dependencies]
dioxus = "0.7.2"
dioxus-web = "0.7.2"
ssd = { version = "0.23.0", path = "../crates/ssd", default-features = false, features = ["_web"] }
web-sys = "0.3.66"

[dependencies.getrandom]
version = "*"
features = ["wasm_js"]