[package]
name = "ssd-web"
version = "0.23.0"
edition = "2021"
publish = false

[dependencies]
dioxus = "0.4.3"
dioxus-web = "0.4.3"
ssd = { version = "0.23.0", path = "../crates/ssd", default-features = false, features = ["_web"] }
web-sys = "0.3.83"

[dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]
