[package]
name = "ssd-data"
version.workspace = true
edition.workspace = true
license-file.workspace = true
description.workspace = true
homepage.workspace = true
repository.workspace = true
readme.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.158", features = ["derive"] }
termcolor = { version = "1.2.0", optional = true }
pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
serde-value = "0.7.0"

[features]
default = []
_python = ["dep:pyo3"]
_access_functions = ["termcolor"]
