[package]
name = "ssd"
version = "0.18.2"
edition = "2021"
license-file = "../../LICENSE"
description = "A service and data description format + a code generator based on rhai scripts and templates"
homepage = "https://github.com/ssd-codegen/ssd"
repository = "https://github.com/ssd-codegen/ssd"
readme = "../../README.md"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "ssd"
path = "src/main.rs"

[dependencies]
ssd-data = { version = "0.18.2", path = "../ssd-data", features = [
    "_access_functions",
] }
anyhow = "1.0.70"
glob = "0.3.1"
lazy_static = "1.4.0"
pest = "2.5.6"
pest_derive = "2.5.6"
regex = "1.7.3"
rhai = { version = "1.13.0", features = [
    "serde",
    "metadata",
    "internals",
], optional = true }
serde = { version = "1.0.158", features = ["derive"] }
shellexpand = "3.1.0"
clap = { version = "4.1.13", optional = true, features = ["derive", "wrap_help"] }
clap_complete = { version = "4.1.5", optional = true }
serde_json = { version = "1.0.94", features = ["preserve_order"] }
termcolor = "1.2.0"
extism = { version = "^1.0.0-rc3", optional = true }
toml = { version = "0.8.8", features = ["preserve_order"] }
serde_yaml = "0.9.27"
handlebars = { version = "4.3.6", optional = true }
tera = { version = "1.18.1", optional = true }
ron = { version = "0.8.1", optional = true }
serde-value = "0.7.0"
rsn = "0.1.0"

pyo3 = { version = "0.20.0", features = ["extension-module"], optional = true }
once_cell = "1.19.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["json"] }

[features]
default = ["rhai", "handlebars", "_bin"]
rhai = ["dep:rhai"]
tera = ["dep:tera"]
handlebars = ["dep:handlebars"]
wasm = ["dep:extism"]
ron = ["dep:ron"]
all = ["rhai", "tera", "handlebars", "wasm", "ron"]
_python = ["dep:pyo3", "ssd-data/_python"]
_web = ["rhai", "rhai/wasm-bindgen"]
_bin = ["dep:clap", "dep:clap_complete"]
